# settler

./: .gitignore  CMakeLists.txt  README.md
example/: example.ini  main.cpp
include/settler/: settler.h
include/settler/parser/INI/: ini_config.h  ini_parser.h
src/: settler.cpp
src/parser/INI/: ini_config.cpp  ini_parser.cpp
tests/: CMakeLists.txt  test.cpp
